[gd_scene load_steps=6 format=2]

[ext_resource path="res://interactable_scripts/base/InteractionArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://core/utils/CollisionTrigger.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/vehicles/VehicleInteractable.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 256, 256 )

[sub_resource type="CircleShape2D" id=2]
resource_local_to_scene = true
radius = 200.0

[node name="VehicleInteractable" type="Node2D"]
script = ExtResource( 5 )

[node name="CollisionTrigger" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="CollisionTrigger" index="0"]
shape = SubResource( 1 )
disabled = true

[node name="InteractionArea" parent="." instance=ExtResource( 2 )]
visible = false

[node name="CollisionShape2D" parent="InteractionArea" index="0"]
shape = SubResource( 2 )
disabled = true

[node name="ActorPosition" type="Position2D" parent="."]
[connection signal="area_entered" from="CollisionTrigger" to="." method="_on_CollisionTrigger_area_entered"]
[connection signal="interacted_with_actor" from="InteractionArea" to="." method="_on_InteractionArea_interacted_with_actor"]

[editable path="CollisionTrigger"]

[editable path="InteractionArea"]
